<resources>

    <!--Non translatable-->
    <string name="No_Data" translatable="false">[No Data]</string>
    <string name="fragment_detail_consegne" translatable="false">fragment_detail_consegne</string>
    <string name="fragment_summary_by_age" translatable="false">fragment_summary_by_age</string>
    <string name="fragment_storico_andamento" translatable="false">fragment_storico_andamento</string>
    <string name="fragment_delivery_group" translatable="false">fragment_delivery_group</string>
    <string name="fragment_points" translatable="false">fragment_points</string>
    <string name="API_Error" translatable="false">API Error - %1$s</string>
    <string name="Big_Title_Placeholder" translatable="false">Big Title Placeholder</string>
    <string name="Small_Text_Placeholder" translatable="false">Small Text Placeholder</string>
    <string name="Number_Placeholder" translatable="false">0</string>
    <string name="Pfizer_BioNTech" translatable="false">Pfizer/BioNTech</string>
    <string name="Pfizer_BioNTech_Short" translatable="false">Pfizer</string>
    <string name="AstraZeneca" translatable="false">AstraZeneca</string>
    <string name="AstraZeneca_2" translatable="false">Vaxzevria (AstraZeneca)</string>
    <string name="janssen" translatable="false">janssen</string>
    <string name="Moderna" translatable="false">Moderna</string>
    <string name="Data" translatable="false">Data</string>

    <!--translatable-->
    <string name="Italian_Situation">Italian Situation</string>
    <string name="doses_administered">Doses Administered</string>
    <string name="doses_administered_first_second">Doses Administered\n( first + second doses)</string>
    <string name="app_name">Vaccine Report</string>
    <string name="Vaccine_Detail">Deliveries Details</string>
    <string name="Vaccine_Detail_Small">Click on the graph for more info..</string>

    <string name="Menu_Title">Don\'t forget:</string>
    <string name="Wear_The_Mask">Wear the mask</string>
    <string name="Wash_Your_Hand">Wash your hands</string>

    <string name="Summary_By_Age">Summary By Age</string>
    <string name="Group_Deliveries">Deliveries Situation</string>
    <string name="Points">Punti Somministrazione</string>
    <string name="History_Vaccines">Storico Somministrazioni</string>
    <string name="Prevision">Prevision</string>

    <string name="Splash_Title">Report Vaccini</string>
    <string name="Splash_Subtitle">The italian campaign against COVID</string>

    <string name="Internet_Missing">No internet connection - A connection is needed</string>

    <string name="look_for_hint">Looking for..</string>
    <string name="empty_text">No items to show..</string>
    <string name="Last_delivery">Last delivery</string>
    <string name="Date_Delivery">Delivered on</string>
    <string name="provider">Provider</string>

    <string name="Last_Update">Last Update..</string>
    <string name="Doses_Delivered">Doses Delivered</string>

    <string name="List_of_deliveries">List of deliveries</string>

    <string name="Other_Vaccines">Other Vaccines</string>

    <string name="General_Data">General Data</string>
    <string name="Age_Group">Age group</string>

    <string name="tab_text_1">Totale</string>
    <string name="tab_text_2" translatable="false">16-19</string>
    <string name="tab_text_3" translatable="false">20-29</string>
    <string name="tab_text_4" translatable="false">30-39</string>
    <string name="tab_text_5" translatable="false">40-49</string>
    <string name="tab_text_6" translatable="false">50-59</string>
    <string name="tab_text_7" translatable="false">60-69</string>
    <string name="tab_text_8" translatable="false">70-79</string>
    <string name="tab_text_9" translatable="false">80-89</string>
    <string name="tab_text_10" translatable="false">90+</string>

    <string name="Health_Workers">Health workers</string>
    <string name="RSA_Guests">RSA Guests</string>
    <string name="Others">Others ( no particular condition )</string>
    <string name="law_enforcement">Law enforcement</string>
    <string name="School_Staff">School Staff</string>
    <string name="non_health_care_professional">Non health care professional</string>
    <string name="Fragili">Fragili</string>

    <string name="First_Dose">First Dose</string>
    <string name="Second_Dose">Second Dose</string>

    <string name="Summary_Explanation">* I dati si riferiscono al numero di vaccini somministrati, NON al numero di persone vaccinate. Allo stato attuale infatti i vaccini disponibili necessitano di due dosi, per avere il dato delle persone vaccinate la voce da considerare è quella sotto \'seconda dose\'"</string>
    <string name="History_Explanation">* Il grafico riporta il numero di vaccini somministrati giorno per giorno nell\'intervallo di tempo che potete personalizzare in fondo. La rappresentazione permette di aver un\'idea di come la velocità di somministrazione si stia evolvendo.</string>

    <string name="Progress_Text">Loading.. Please wait..</string>
    <string name="Progress_Title">Loading..</string>

    <string name="Dont_Show_Anymore">Don\'t show it anymore</string>
    <string name="action_info" translatable="false">Info..</string>
    <string name="help">Help..</string>
    <string name="Info_About">All the info comes from public data by %1$s, collected by %2$s and hosted on %3$s\n\nApp developed by %4$s</string>

    <string name="News_Title">Announcements</string>
    <string name="News_Text">In this new version we add a Vaccine progression history in the menù in the upper left and a new graphs in the summary by the age ( by age e by category )</string>

    <string name="Instruction_Title">Instruction</string>
    <string name="Instruction_Text">You can click on the menù upper left ( 3 horizontal stripes ) to navigate to region details, prevision about date of herd immunity in Italy and so on..</string>
    <string name="Last_Back_Alert">If you click back one more time the app will close.</string>

    <string name="Distribituion_Category">Doses on category</string>
    <string name="Click_For_Graph">Click For Graph</string>

    <string name="Doses_For_Age_Graph_Explanation">Doses Administered for age group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Invalid_Date">Invalid date ( remember: end date must be bigger than start date )</string>

    <string name="Start_Date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="Media_Desc">In the range selected ( %1$s days ) a media of %2$s vaccines a day have been administered  %3$s</string>

    <string name="Graph_Categories_Detail">Graph for category distribution</string>
    <string name="Graph_Administered_Detail">Graph for administered doses</string>

    <string name="Previsioni_Explanation">Quanto segue è una stima basata sul numero di persone già vaccinate ad oggi e il numero di vaccini somministrato mediamente negli ultimi 7 giorni. All\'aumentare del numero di vaccini somministrati giornalmente le tempistiche potrebbero variare in maniera importante, l\'eventuale arrivo di un vaccino che necessita di una sola dose ( i vaccini attuali richiedono un secondo richiamo ) dimezzerebbe i tempi attuali.</string>

    <string name="Herd_immunity">Herd immunity</string>
    <string name="Herd_Immunity_Text" translatable="false">Per raggiungere l\'immunità di gregge è necessario coprire il 70%% della popolazione italiana, quindi circa 40 milioni di persone.&lt;br /&gt;&lt;br /&gt;Al ritmo attuale ( %1$s vaccinazioni al giorno ) questa quota si raggiungerà tra %2$s giorni, ovvero il %3$s\n( previsione del governo: agosto 2021 )</string>
    <string name="Herd_Immunity_Reached" translatable="false">L\'Italia ha dato copertura vaccinale al 70%% della popolazione italiana, quindi circa 40 milioni di persone, in data  %1$s.</string>

    <string name="Vaccinazione_Massa" translatable="false">Vaccinazione di massa</string>
    <string name="Vaccinazione_Massa_Text" translatable="false">L\'Italia ha calcolato in 30 milioni circa le persone a rischio ( personale socio-sanitario, personale scolastico, forze armate, over 55, persone vulnerabili di qualsiasi età ) che hanno diritto alla precedenza nella somministrazione dei vaccini.&lt;br /&gt;&lt;br /&gt;Chi non rientra in una fascia protetta ( under 55 senza particolari patologie ) dovrebbe potersi vaccinare tra %1$s giorni quindi a partire dal %2$s. Il calcolo è valido a condizione che prima di aprire alle classi non a rischio si copra per intero il fabbisogno delle classi a rischio.</string>
    <string name="Vaccinazione_Massa_Reached" translatable="false">Al momento le fasce a rischio risultano aver ricevuto copertura vaccinale e quindi il vaccino è accessibile anche alle classi non a rischio.</string>

    <string name="Percent_Population" translatable="false">%1$s%% ha ricevuto almeno una dose.</string>

    <string name="Math_Formula" translatable="false">* Le formule matematiche utilizzate sono qui disponibili in chiaro per eventuale verifica o segnalazione errori. I valori sono moltiplicati per 2 perchè ogni persona deve ricevere 2 dosi.\n\nImmunità di gregge:\n70%% popolazione italiana: %1$s \nVaccini già somministrati: %2$s \nMedia vaccinazioni / giorno: %3$s \n\n( ( %1$s*2 ) - %2$s ) / %3$s\nRisultato: %4$s \n\nVaccinazione di massa:\nPopolazione a rischio: %5$s \nVaccini già somministrati: %2$s \nMedia vaccinazioni / giorno: %3$s \n\n( ( %5$s*2 ) - %2$s ) / %3$s\nRisultato: %6$s\n</string>
    <string name="Already_Update">Data are already up to date</string>

    <string name="population">Population</string>
    <string name="Area_Of">in the area of</string>
    <string name="Population_Vaccined">Population Vaccined</string>
</resources>