<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background_1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_main_text"
                android:textColor="@color/Text_Big"
                android:textStyle="bold"
                android:text="@string/Big_Title_Placeholder"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_subtext"
                android:textColor="@color/Text_Small"
                android:text="@string/Small_Text_Placeholder"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

        <LinearLayout
            android:layout_width="wrap_content"
            android:minWidth="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/layout_bg">

            <TextView
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_doses"
                android:text="@string/Number_Placeholder"
                android:textSize="25sp"/>

            <TextView
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="12sp"
                android:text="@string/Doses_Delivered"/>
        </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:background="@color/Dividing_Bar"
        android:layout_height="1dp"
        />

</LinearLayout>