<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Background_1"
    tools:context=".ui.fragment_storico_andamento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:textColor="@color/Background_1"
            android:textSize="12sp"
            android:text="@string/History_Explanation"
            android:background="@color/Text_Big"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="2"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:background="@color/Text_Big"
                android:weightSum="1">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/total_white"
                        android:text="@string/Start_Date"/>

                    <EditText
                        android:id="@+id/et_data_1"
                        android:inputType="none"
                        android:focusable="false"
                        android:background="@drawable/edit_text_border"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/total_white"
                        android:text="@string/End_Date"/>

                    <EditText
                        android:background="@drawable/edit_text_border"
                        android:id="@+id/et_data_2"
                        android:inputType="none"
                        android:focusable="false"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:textColor="@color/Background_1"
                android:textSize="12sp"
                android:background="@color/Text_Big"
                android:id="@+id/tv_media"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>